# PandaTorch

./: .gitignore  README.md  README.rst  pyproject.toml
notebooks/: Trial.ipynb
pandatorch/: data.py  model.py
tests/: test_data.py  test_model.py  test_pandatorch.py
